--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Joe Shoop &#149; Work
       <a class="joe" href="/">Joe Shoop</a>
       <h2>Joe Shoop is an interface designer living and working and taking naps in sunny Seattle, Washington.</h2>
       <p>Full portfolio coming soon.</p>
-      <p>Available for Freelance & Contract projects – <a href="#">Get&nbsp;in&nbsp;touch.</a></p>
+      <p>Available for Freelance & Contract projects – <a href="mailto:joe@joeshoop.com">Email Me</a></p>
     </div>
     <div>
       <div class="empty row">
