--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
 ---
 title: Joe Shoop &#149; Work
+layout: base
 ---
-
-<html>
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-
-	<link rel="shortcut icon" href="/r/images/favicon.ico">
-	<link rel="stylesheet" href="/r/css/style.css">
-
-	<title>{{ page.title }}</title>
-</head>
-
-<body>
 
 <div class="thumbnails container">
   <div class="row">
@@ -23,6 +10,13 @@ title: Joe Shoop &#149; Work
       <h2>Joe Shoop is an interface designer living and working and taking naps in sunny Seattle, Washington.</h2>
       <p>Full portfolio coming soon.</p>
       <p>Available for Freelance & Contract projects – <a href="mailto:joe@joeshoop.com">Email Me</a></p>
+    <ul>
+    {% for project in site.projects %}
+      <li>
+        <a href="{{ project.url }}">{{ project.title }}</a>
+      </li>
+    {% endfor %}
+    </ul>
     </div>
     <div>
       <div class="empty row">
@@ -76,13 +70,4 @@ title: Joe Shoop &#149; Work
     </div>
   </div>
 
-  <footer id="footer">
-    <p class="small">© 2015</p>
-  </footer>
-
 </div>
-
-
-</body>
-
-</html>
