--- a/_projects/blix/blix2/Deploy/Blix/index.html
+++ b/_projects/blix/blix2/Deploy/Blix/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="static/css/style.css">
 
 	
-	<title>Blix | My Blix</title>
+	<title>Blix | My Blix TESTING</title>
 	
 
 </head>
