fixing a broken image

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ color-text: white;
     {% endfor %}
   </span></h2>
 
-  <img class="thanks" src="/r/images/thanks.png" />
+  <img class="thanks" src="/r/images/Thanks.png" />
 </div>
