Bug fixes. Image sliders now gracefully degrade when jquery doesnt load. Fixed some typos. Fixed a few broken images. Adjusted font sizes. Project navigation doesn't load all the large images on mobile. Probably more.

--- a/_projects/starbucks/index.html
+++ b/_projects/starbucks/index.html
@@ -8,7 +8,7 @@ color-bg: '#000'
 color-text: '#fff'
 color-headline: '#316239'
 
-thumbnail: 'starbucks-thumbnail.jpg'
+thumbnail: 'starbucks-photobooth-01.jpg'
 ---
 
 <section class="copy">
