--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,6 @@ permalink: /contact/
   <input class="submit" type='submit' value='Send It!' disabled/>
 </form>
 
-<p>Alternatively, you can just <a href="mailto:&#106;&#111;&#101;&#064;&#106;&#111;&#101;&#115;&#104;&#111;&#111;&#112;&#046;&#099;&#111;&#109;">send me an email</a>, or follow me on <a href="https://twitter.com/joeshoop">Twitter</a>, <a href="https://www.instagram.com/joeshoop/">Instagram</a> & <a href="https://dribbble.com/joeshoop">Dribble</a>.</p>
+<p>Alternatively, you can just <a href="mailto:&#106;&#111;&#101;&#064;&#106;&#111;&#101;&#115;&#104;&#111;&#111;&#112;&#046;&#099;&#111;&#109;">send me an email</a>, or follow me on <a href="https://twitter.com/joeshoop">Twitter</a>, <a href="https://www.instagram.com/joeshoop/">Instagram</a> & <a href="https://dribbble.com/joeshoop">Dribbble</a>.</p>
 </section>
       
