--- a/_projects/bluenile/index.html
+++ b/_projects/bluenile/index.html
@@ -33,7 +33,7 @@ thumbnail-size: 'big'
 		<div><img src="bluenile-filters-01.jpg" /></div>
 		<div><img src="bluenile-diamond-detail.jpg" /></div>
 		<div><img src="bluenile-ringbuilder-02.jpg" /></div>
-		<div><img src="bluenile-settingdetail-01.png" /></div>
+		<div><img src="bluenile-settingdetail-01.jpg" /></div>
 		<div><img src="bluenile-ringbuilder-03.jpg" /></div>
 	</div>
 </section>
