Fixed Broken Julep image.

--- a/_projects/julep/index.html
+++ b/_projects/julep/index.html
@@ -8,11 +8,11 @@ color-bg: '#fff'
 color-text: '#000'
 color-headline: '#C228B8'
 
-thumbnail: 'julep-phonehand.jpg'
+thumbnail: 'julep-thumbnail.jpg'
 ---
 
 <section>
-	<div class="full cover" style="background-image:url(Julep-Phonehand.jpg)">
+	<div class="full cover" style="background-image:url(julep-thumbnail.jpg)">
 	</div>
 </section>
 
