Big design update to improve layout of project pages

--- a/about.html
+++ b/about.html
@@ -3,16 +3,17 @@ layout: default
 title: About
 permalink: /about/
 
-color-bg: black;
+color-bg: '#222'
 color-text: white;
 ---
 
-<section class="copy">
-	<h5 class="text-small caps">About Me</h5>
-	<h3>I am an independent Product Designer in sunny Seattle, WA.</h3>
-	<p>I have been designing and building things for screens of all shapes and sizes for the last 15 years, and in that time have designed products for companies like Showtime, Target, Starbucks, Microsoft, Blue Nile, Julep & more.</p>
+<section class="lead">
+	<div class="wrap">
+		<p>I am an Independent Product Designer in sunny Seattle, WA.</p>
+		<p>I have been designing and building things for screens of all shapes and sizes for almost 15 years, and in that time have designed products for companies like Showtime, Target, Starbucks, Microsoft, Blue Nile, Booking.com, Julep, and more.</p>
 
-	<p>I have experience designing UX & UI for iPhone and iPad apps, Responsive Web projects and Front-end web development. I am also pretty good at eating burritos.
+		<p>I have experience with UX & UI design for native mobile apps, Responsive Web projects, and Front-end web development. I am also pretty good at eating burritos.</p>
 
-	<p>I am currently available for Freelance & Contract Projects. If you are interested in working together, I'd love to hear from you! <a href="/contact">Get in touch</a>.</p>
+		<p>I am currently available for Freelance & Contract Projects. If you are interested in working together, I'd love to hear from you! <a href="/contact">Get in touch</a>.</p>
+	</div>
 </section>
