--- a/_projects/blix/index.html
+++ b/_projects/blix/index.html
@@ -41,7 +41,7 @@ thumbnail-size: 'big'
 		<div class="copy">
 			<h5>iPhone App</h5>
 			<h3>Save, Search & Tag</h3>
-			<p>Saving a new place is simple - move the map to a place you want to save</p>
+			<p>Plan for your next trip, or keep track of recommendations from friends. Share a list you've made with everybody, or just a few close friends.</p>
 		</div>
 	</div>
 </section>
